Added a visual representation of 1D perlin Noise

--- a/Test/Test.vcxproj
+++ b/Test/Test.vcxproj
@@ -137,6 +137,9 @@
       <Project>{550bc388-7034-45e2-bb0d-744f59e581c9}</Project>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Test.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
